<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg" >

    <include
        android:id="@+id/setting_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/header_title_layout" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/setting_header" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:text="@string/settings"
                android:textColor="@color/text_blue_506E96"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_setting"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dip"
                    android:layout_marginLeft="8dip"
                    android:layout_marginRight="8dip"
                    android:layout_marginTop="3dip"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_browse_style"
                        android:textColor="@color/text_blue_BCD5FE" />

                    <RadioGroup
                        android:id="@+id/setting_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/setting_radio_poster"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dip"
                            android:checked="true"
                            android:text="@string/poster"
                            android:textColor="@color/text_blue_BCD5FE" />

                        <RadioButton
                            android:id="@+id/setting_radio_list"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dip"
                            android:text="@string/list"
                            android:textColor="@color/text_blue_BCD5FE" />
                    </RadioGroup>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_line_up_dark" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dip"
                    android:layout_marginLeft="8dip"
                    android:layout_marginRight="8dip"
                    android:layout_marginTop="3dip"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alarm_setting"
                        android:textColor="@color/text_blue_BCD5FE" />

                    <TextView
                        android:id="@+id/setting_alarm_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dip"
                        android:background="@drawable/icon_setting_alarm_on"
                        android:gravity="center"
                        android:text="NO          OFF" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_line_up_dark" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_layout_down_selector"
                    android:clickable="true" >

                    <TextView
                        android:id="@+id/setting_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dip"
                        android:text="@string/clear_cache"
                        android:textColor="@color/text_blue_BCD5FE" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="10dip"
                android:text="@string/feedback"
                android:textColor="@color/text_blue_506E96"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_setting"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_layout_up_selector"
                    android:clickable="true" >

                    <TextView
                        android:id="@+id/setting_appraise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dip"
                        android:text="@string/appraise"
                        android:textColor="@color/text_blue_BCD5FE" />
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_line_up_dark" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_layout_center_selector"
                    android:clickable="true" >

                    <TextView
                        android:id="@+id/setting_tell_friends"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dip"
                        android:text="@string/tell_friends"
                        android:textColor="@color/text_blue_BCD5FE" />
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_line_up_dark" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_layout_down_selector"
                    android:clickable="true" >

                    <TextView
                        android:id="@+id/setting_feedback_idea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dip"
                        android:text="@string/feedback_idea"
                        android:textColor="@color/text_blue_BCD5FE" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="10dip"
                android:text="@string/about"
                android:textColor="@color/text_blue_506E96"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_setting"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_layout_up_selector"
                    android:clickable="true" >

                    <TextView
                        android:id="@+id/setting_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dip"
                        android:text="@string/version"
                        android:textColor="@color/text_blue_BCD5FE" />
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_line_up_dark" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_layout_down_selector"
                    android:clickable="true" >

                    <TextView
                        android:id="@+id/setting_version_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dip"
                        android:text="@string/version_info"
                        android:textColor="@color/text_blue_BCD5FE" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>